syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.common.model.bo.message";
option java_multiple_files = true;
option swift_prefix = "";

import "model/message/message.proto";

message MessagesWithTotal {
    int32 total = 1;
    bool is_group_message = 2;
    int64 from_id = 3;
    repeated Message messages = 4;
}
