syntax = "proto3";

package im.turms.proto;

option java_package = "im.turms.common.model.dto.request.message";
option java_multiple_files = true;
option swift_prefix = "";

message QueryMessageStatusesRequest {
    int64 message_id = 1;
}
